--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "sensio/generator-bundle": "~2.3",
         "incenteev/composer-parameter-handler": "~2.0",
         "gedmo/doctrine-extensions":      "dev-master",
-        "didweb/resize": "1.*"
+        "didweb/resize": "1.*",
+        "didweb/slug": "1.*"
     },
     "scripts": {
         "post-install-cmd": [
